[gd_scene load_steps=3 format=2]

[ext_resource path="res://Boss 3 Fight.gd" type="Script" id=1]
[ext_resource path="res://assets/boss-splash-3.png" type="Texture" id=2]

[node name="Boss 3 Fight" type="Node"]
script = ExtResource( 1 )

[node name="boss3Wait" type="Timer" parent="."]
wait_time = 45.0
one_shot = true

[node name="bossScreenTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 962.752, 541.784 )
texture = ExtResource( 2 )
[connection signal="timeout" from="boss3Wait" to="." method="_on_boss3Wait_timeout"]
[connection signal="timeout" from="bossScreenTimer" to="." method="_on_bossScreenTimer_timeout"]
